# aiida-sssp-workflow

./: '  -  .aiida-testing-config.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  README.md  SELECT_PROTOCOL.yml  \  conftest.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.json  setup.py
.docker/: Dockerfile  docker-bake.hcl  docker-compose.aiida-sssp-workflow.yml
.docker/_static/: Si.paw.z_4.ld1.psl.v1.0.0-high.upf
.docker/scripts/: 60-code-setup.sh
.docker/tests/: conftest.py  test_aiida.py
.github/: check_version.py
.github/workflows/: ci-nightly.yml  ci.yml  docker.yml  publish-on-pypi.yml  release.yml
aiida_sssp_workflow/: CALC_PROTOCOL.yml  PROTOCOL_CALC.yml  PROTOCOL_CRI.yml  __init__.py  cli.py  efermi.f  efermi.py  efermi.pyf  efermi_module-f2pywrappers.f  efermi_modulemodule.c  helpers.py  parsers.py  sssp_protocol.yml  utils.py  version.py
aiida_sssp_workflow/REF/AE_EOS/: WIEN2K_OXIDES.json
aiida_sssp_workflow/REF/CIFs/: SiF4.cif
aiida_sssp_workflow/REF/CIFs_REN/: CeN.cif  DyN.cif  ErN.cif  EuN.cif  GdN.cif  HoN.cif  LaN.cif  LuN.cif  NdN.cif  PmN.cif  PrN.cif  SmN.cif  TbN.cif  TmN.cif  YbN.cif
aiida_sssp_workflow/REF/UPFs/: F.oncvpsp.upf
aiida_sssp_workflow/calculations/: bands_distance.py  birch_murnaghan_fit.py  calculate_bands_distance.py  calculate_delta.py  calculate_delta_volume.py  calculate_metric.py  calculations.py  helper_functions.py  ld1.py  wien2k_ref.py
aiida_sssp_workflow/cli/: __init__.py  extract.py  inspect.py  launch.py  options.py  run.py  validate.py
aiida_sssp_workflow/cli/tools/: __init__.py  dump.py  relabel.py
aiida_sssp_workflow/data/: __init__.py
aiida_sssp_workflow/parsers/: ld1.py
aiida_sssp_workflow/protocol/: band.yml  bands.yml  control.yml  converge.yml  criteria.yml  delta.yml  precision.yml
aiida_sssp_workflow/statics/: clean_primitive_typical_cif.ipynb  convert-lan-typical-eos-to-json.ipynb  generatecif.ipynb  generatemapping.ipynb  generatemapping.py
aiida_sssp_workflow/utils/: element.py  structure.py  utils.py
aiida_sssp_workflow/workflows/: __init__.py  _eos.py  bands.py  bands_distance.py  bands_measure.py  cohesive_energy.py  common.py  delta_factor.py  delta_measure.py  eos.py  helper.py  phonon_frequencies.py  pressure.py  pressure_evaluation.py  protocol.yml  verifications.py
code_setup/: ph.yml  pw.yml
demo/: verification.py
demo/_static/Mg/: Mg.sg15-v1.2-oncv4.upf  (+1 more)
docker/: Dockerfile
docs/: gui.md  index.md  requirements.txt  spec.md  tutorial.md
docs/source/: conf.py  index.rst  rtd_settings.py
efermi/: __init__.py  efermi.py  efermi_modulemodule.c
examples/: _static  create_lanthanides.py  efermi.f  exam_pw.py  example_01.py  example_band.py  example_band_evaluation.py  example_bands_distance.py  example_cohesive_energy.py  example_convergence_demo.py  example_delta_factor.py  example_eos.py  example_ld1.py  example_optimize.py  example_phonon.py  example_pressure.py  example_pw.py  example_qe.py  example_ref_generator_SiF4.py  example_verification.py  example_verification_SiF4.py  example_verification_Sm.py  run-test.ipynb  run_bands_distance_calculation.ipynb
examples/.ipynb_checkpoints/: run_bands_distance_calculation-checkpoint.ipynb
examples/convergence/: example_band.py  example_cohesive_energy.py  example_phonon.py  example_pressure.py
examples/evaluate/: example_band.py  example_cohesive_energy.py  example_phonon_frequencies.py  example_pressure.py
examples/legacy_convergence/: example_band.py  example_cohesive_energy.py  example_phonon_frequencies.py  example_pressure.py
jupyternb/: negative-rho-check.ipynb  time-statistic-full.ipynb  time-statistic-npool.ipynb
pseudo_parser/upf_parser/: __init__.py
run_script/: demo.py  production.py
setup-yaml/: compute-setup-daint.yaml  computer-setup-daint-mem.yaml  computer-setup-daint-mr32-mem.yaml  computer-setup-daint.yaml  computer-setup-eiger-hq.yaml  computer-setup-eiger-mem.yaml  computer-setup-eiger-mr32-mem.yaml  computer-setup-eiger-mr33-mem.yaml  computer-setup-eiger.yaml  computer-setup-localhost-ssh.yaml  computer-setup-localhost.yaml  computer-setup.yaml  ph.yml  ph7.0-daint-mem.yaml  ph7.0-daint-mr32-mem.yaml  ph7.0-daint.yaml  ph7.0-eiger-hq.yaml  ph7.0-eiger-mem.yaml  ph7.0-eiger-mr32-mem.yaml  ph7.0-eiger-mr33-mem.yaml  ph7.0-eiger.yaml  ph7.1-localhost-ssh.yml  pw.yml  pw7.0-daint-mem.yaml  pw7.0-daint-mr32-mem.yaml  pw7.0-daint.yaml  pw7.0-eiger-hq.yaml  pw7.0-eiger-mem.yaml  pw7.0-eiger-mr32-mem.yaml  pw7.0-eiger-mr33-mem.yaml  pw7.0-eiger.yaml  pw7.1-localhost-ssh.yml
src/aiida_sssp_workflow/: efermi.py
submit_test/20220714-00001/: CRASH  _aiidasubmit.sh  _scheduler-stderr.txt  aiida.in  aiida.out  input_tmp.in
test_bak/: conftest.py  test_nightly.py
test_bak/_static/: Fe.pbe-spn-kjpaw_psl.0.2.1.UPF  Hf.pbe-spn-rrkjus_psl.1.0.0.UPF  La.GGA-PBE-paw-v1.0.UPF  Mg.pbe-spn-kjpaw_psl.1.0.0.UPF  O.pbe-n-kjpaw_psl.1.0.0.UPF  Si.pbe-n-rrkjus_psl.1.0.0.UPF  Sm.GGA-PBE-paw-v1.0.UPF
test_bak/test_nightly/: test_verification_convergence_workflow.yml
test_pseudo_parser/: test_upf.py
tests/: conftest.py  sample_processes.py  test_bands_distance.py  test_calcfunction.py  test_calculations.py  test_cli.py  test_convergence_engine.py  test_efermi.py  test_nightly.py  test_parsers.py  test_utils.py
tests/_static/: Er.GGA-PBE-paw-v1.0.UPF  F_ONCV_PBE-1.2.upf  Si.pbe-n-kjpaw_psl.1.0.0.UPF  Si.pbe-n-rrkjus_psl.1.0.0.UPF  Si_ONCV_PBE-1.2.upf  _static
tests/test_calcfunction/: test_birch_murnaghan_fit.yml
tests/test_calculations/: test_ld1_default.in
tests/test_nightly/: test_verification_accuracy_workflow.yml  test_verification_convergence_workflow.yml
tests/test_utils/: test_get_standard_structure_Fe_convergence_None_.yml  test_get_standard_structure_Fe_delta_gs_.yml  test_get_standard_structure_Te_convergence_xo_.yml  test_get_standard_structure_default.yml
tests/utils/: test_pseudo.py  test_structure.py
tests/workflows/: test_verification.py
tests_workflow/: conftest.py  test_delta_factor.py  test_delta_measure.py
(+565 files in other folders)
