[build-system]
requires = ['setuptools>=40.8.0', 'wheel', 'reentry~=1.3', 'fastentrypoints~=0.12']

[tool.pylint.format]
max-line-length = 140

[tool.pylint.tool-check]
generated-members = 'self.exit_codes.*'

[tool.pylint.messages_control]
disable = [
    'bad-continuation',
    'duplicate-code',
    'locally-disabled',
    'logging-format-interpolation',
    'inconsistent-return-statements',
    'import-outside-toplevel',
    'no-else-raise',
    'too-many-arguments',
    'too-many-ancestors',
    'too-many-branches',
    'too-many-locals',
    'protected-access',
]

[tool.pylint.miscellaneous]
notes = ['FIXME']

[tool.pylint.basic]
good-names = [
    'i',
    'j',
    'k',
    'x',
    'V0',
    'B0',
    'B1',
    'P',
    'V',
    'REF',
    'SsspFamily',
    'StructureData',
    'UpfData',
    'PwCalculation',
]

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = [
    'tests',
]
filterwarnings = [
    'ignore::DeprecationWarning:frozendict:',
    'ignore::DeprecationWarning:pkg_resources:',
    'ignore::DeprecationWarning:reentry:',
    'ignore::DeprecationWarning:sqlalchemy_utils:',
]

# mypy global options:

[tool.mypy]
show_error_codes = true

check_untyped_defs = true
scripts_are_modules = true
warn_unused_ignores = true
warn_redundant_casts = true
