[metadata]
name = aiida_sssp_workflow
version = 2.0.1
description = Package for the AiiDA SSSP workflow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aiidateam/aiida-sssp-workflow
author = Jusong Yu
author_email = jusong.yu@epfl.ch
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/aiidateam/aiida-sssp-workflow/issues

[options]
packages = find:
install_requires =
    aiida-core~=2.1
    aiida-quantumespresso~=4.0.1
    numpy~=1.23
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude = tests, test*

[options.entry_points]
console_scripts =
    aiida-sssp-workflow = aiida_sssp_workflow.cli:cmd_root
aiida.calculations =
    sssp_workflow.birch_murnaghan_fit = aiida_sssp_workflow.calculations.birch_murnaghan_fit:birch_murnaghan_fit
    sssp_workflow.calculate_delta = aiida_sssp_workflow.calculations.calculate_delta:calculate_delta
    sssp_workflow.calculate_delta_volume = aiida_sssp_workflow.calculations.calculate_delta_volume:calculate_delta_volume
aiida.workflows =
    sssp_workflow.accuracy.delta = aiida_sssp_workflow.workflows.measure.delta:DeltaMeasureWorkChain
    sssp_workflow.accuracy.bands = aiida_sssp_workflow.workflows.measure.bands:BandsMeasureWorkChain
    sssp_workflow.convergence.cohesive_energy = aiida_sssp_workflow.workflows.convergence.cohesive_energy:ConvergenceCohesiveEnergyWorkChain
    sssp_workflow.convergence.phonon_frequencies = aiida_sssp_workflow.workflows.convergence.phonon_frequencies:ConvergencePhononFrequenciesWorkChain
    sssp_workflow.convergence.pressure = aiida_sssp_workflow.workflows.convergence.pressure:ConvergencePressureWorkChain
    sssp_workflow.convergence.bands = aiida_sssp_workflow.workflows.convergence.bands:ConvergenceBandsWorkChain
    sssp_workflow.convergence.delta = aiida_sssp_workflow.workflows.convergence.delta:ConvergenceDeltaWorkChain
    sssp_workflow.verification = aiida_sssp_workflow.workflows.verifications:VerificationWorkChain

[options.extras_require]
dev =
    bumpver==2021.1114
    pre-commit==2.11.1
tests = 
    pgtest~=1.3,>=1.3.1
    pytest~=6.2

[options.package_data]
aiida_sssp_workflow.protocol = bands.yml, criteria.yml, control.yml, converge.yml, delta.yml
aiida_sssp_workflow.statics = cif/typical/*.cif, cif/oxides/*.cif, cif/unaries/*.cif, cif/mapping.json, upf/*.upf, AE_EOS/*.json

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.

[bumpver]
current_version = "2.0.1"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiida_sssp_workflow/version.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {version}
